--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-description: "你来到了没有知识的荒原 🙊"
-header-img: "img/404-bg.jpg"
+description: " 一个无聊的404"
+header-img: "img/404-bg.svg"
 permalink: /404.html
 ---
 
