--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: " 一个无聊的404"
+description: " 这是一个很无聊的404"
 header-img: "img/404-bg.svg"
 permalink: /404.html
 ---
